compiler/tests/success/subarrays/x86-64/nested.jazz
export fn main () -> reg u64 {
  reg u64 res;
  stack u64[4] s;
  reg ptr u64[3] r1;
  reg ptr u64[2] r2;

  r1 = s[1:3];
  r2 = r1[1:2];
  r2[0] = 2;
  r1[1:2] = r2;
  s[1:3] = r1;

  res = s[2];
  return res;
}
