compiler/tests/fail/array_expansion/x86-64/sub_array_param_not_reg.jazz
fn f (reg u64[4] r) -> reg u64 {
  reg u64 res;
  res = r[0];
  return res;
}

export fn main () -> reg u64 {
  stack u64[4] s;
  reg u64 res;

  res = f(s[0:4]);

  return res;
}
